# ic-dex-rs

./: Cargo.toml  Makefile  README.md  dfx.json  package-lock.json  package.json  setup.sh
scripts/: init_local_icp.sh  install.sh
src/dex/: Cargo.toml  dex.did
src/dex/scripts/: demo.sh  initalize_local_balance.sh  initialize_local_balance.sh  install.sh
src/dex/src/: exchange.rs  icrc2.rs  lib.rs  types.rs  utils.rs
src/dex/test/: demo.sh
src/ic_dex_rs_backend/: Cargo.toml  ic_dex_rs_backend.did
src/ic_dex_rs_backend/src/: exchange.rs  ft.rs  lib.rs  types.rs
src/ic_dex_rs_backend/test/: init.sh  transfer.sh
src/icrc1/: Cargo.toml
src/icrc1/scripts/: deploy_aaa.sh  deploy_bbb.sh  deploy_ledger.sh
src/ledger/: Cargo.toml  ledger.did  ledger.public.did
src/ledger/src/: lib.rs
src/publisher/: Cargo.toml
src/publisher/src/: lib.rs
src/subscriber/: Cargo.toml
src/system_api/: Cargo.toml
src/token/: dfx.json
src/token/src/: token.mo
src/vetkd/: Cargo.toml  vetkd.did
src/vetkd/src/: lib.rs
src/vetkd_backend/: Cargo.toml
test/: demo.sh  deposit.sh
