[package]
name = "ic_dex_rs_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9"
ic-cdk = "0.10"
ic-cdk-macros = "0.7"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
ic-ledger-types = "0.7"
num-bigint = "0.4"
num-traits = "0.2"
serde = "1.0.126"
serde_derive = "1.0.126"